infrastructure/networking/gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: gateway
spec:
  # addresses:
  # - type: IPAddress
  #   value: 192.168.10.21  # Optional: used only for static IP binding
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.wiredgateway.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.wiredgateway.com"
      tls:
        certificateRefs:
          - name: cert-wiredgateway
            kind: Secret
            group: "" # required for cross-namespace secrets
      allowedRoutes:
        namespaces:
          from: All
