infrastructure/networking/gateway/route-hello.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-hello
  namespace: gateway
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - hello.wiredgateway.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-service
          port: 80
